Closed Bug 1553944 Opened 6 years ago Closed 6 years ago

Fix some compile errors in mailnews

Categories

(MailNews Core :: General, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 69.0

People

(Reporter: jorgk-bmo, Assigned: jorgk-bmo)

Details

Attachments

(1 file)

We need to include('/ipc/chromium/chromium-config.mozbuild') and more.

Attached patch 1553944.patchSplinter Review

No idea why I got compile errors in nsMessengerWinIntegration.cpp. Looks like the string types were always wrong. Maybe the chromium setup tightened the rules. Hmm.

Attachment #9067163 - Flags: review?(mkmelin+mozilla)

Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/cec9658e7919
Fix mailnews/ compile errors after bug 1525720. rs=bustage-fix

Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 69.0

This broke the build:

../config/tests/test_mozbuild_reading.py::TestMozbuildReading::test_filesystem_traversal_no_config TEST-UNEXPECTED-FAIL

BuildReaderError:
==============================
FATAL ERROR PROCESSING MOZBUILD FILE
==============================

The error occurred while processing the following file:

    /builds/worker/workspace/build/src/comm/mailnews/base/moz.build

The underlying problem is an illegal file access. This is likely due to trying to access a file outside of the top source directory.

The path whose access was denied is:

    /ipc/chromium/chromium-config.mozbuild

Modify the script to not access this file and try again.

Probably because mozreltopsrcdir is not available without a config.

Pushed by geoff@darktrojan.net: https://hg.mozilla.org/comm-central/rev/5a137395d1db follow-up - Fix broken build checks; rs=bustage-fix-fix
Attachment #9067163 - Flags: review?(mkmelin+mozilla) → review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: