Bug 1553944 - Fix mailnews/ compile errors after bug 1525720. rs=bustage-fix